fixed popup name text align

--- a/src/Components/Team-Layout/Board/Board.css
+++ b/src/Components/Team-Layout/Board/Board.css
@@ -118,6 +118,7 @@
 .popup-name{
     font-size: 20px;
     justify-self: center;
+    text-align: center;
 }
 
 .popup-linkedin{
